Update Telegram channel link in index.html

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <p id="tg-d">Updates & Payments</p>
                 </div>
             </div>
-            <a href="https://t.me/your_channel" class="tg-btn" id="tg-b">JOIN</a>
+            <a href="https://t.me/SuperProfitfaucet" class="tg-btn" id="tg-b">JOIN</a>
         </div>
     </div>
 
