Update title and language data in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Super Profit Hub - Main V</title>
+    <title>Super Profit  - Main V</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <style>
@@ -66,7 +66,7 @@
             <div class="tg-info">
                 <div class="tg-icon"><i class="fab fa-telegram"></i></div>
                 <div class="tg-txt">
-                    <h3 id="tg-t">OFFICIAL</h3>
+                    <h3 id="tg-t">TELEGRAM</h3>
                     <p id="tg-d">Updates & Payments</p>
                 </div>
             </div>
@@ -82,8 +82,8 @@
         window.onresize=init; init(); anim();
         let cur = 'en';
         const data = {
-            en: { t: "SUPER PROFIT", st: "ELITE CRYPTO REWARDS V11", a: "ACTIVE", tt: "OFFICIAL HUB", td: "Updates & Payments", tb: "JOIN", lb: "العربية" },
-            ar: { t: "سوبر الربح", st: "مركز مكافآت النخبة V11", a: "نشط", tt: "قناتنا الرسمية", td: "تحديثات ودفع فوري", tb: "انضم", lb: "English" }
+            en: { t: "BEECLAIMER", st: "FREE CRYPTO REWARDS ", a: "ACTIVE", tt: "Telegram chanal", td: "Updates & Payments", tb: "JOIN", lb: "العربية" },
+            ar: { t: "Beeclaimer", st: "مركز مكافآت مجانا", a: "نشط", tt: "قناتنا الرسمية", td: "تحديثات ودفع فوري", tb: "انضم", lb: "English" }
         };
         function toggleLang() {
             cur = cur === 'en' ? 'ar' : 'en'; const d = data[cur];
