Update title and branding in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Super Profit  - Main V</title>
+    <title>beeclaimer  - Main V</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <style>
@@ -52,7 +52,7 @@
     <div class="main-wrapper">
         <div class="lang-switch" onclick="toggleLang()" id="lang-btn">العربية</div>
         <div class="header">
-            <div class="title" id="txt-title">SUPER PROFIT</div>
+            <div class="title" id="txt-title">BeeClaimer</div>
             <div class="subtitle" id="txt-subtitle">ELITE CRYPTO REWARDS </div>
         </div>
         <div class="grid-container">
@@ -62,7 +62,7 @@
             <a href="Bnb.html" class="coin-card"><img src="https://cryptologos.cc/logos/binance-coin-bnb-logo.png"><div class="coin-name">BNB</div><div class="coin-status" id="s4">ACTIVE</div></a>
         </div>
 
-        <a href="https://t.me/SuperProfitfaucet" target="_blank" class="tg-banner animate__animated animate__fadeInUp">
+        <a href="https://t.me/BeeClaimer" target="_blank" class="tg-banner animate__animated animate__fadeInUp">
             <div class="tg-info">
                 <div class="tg-icon"><i class="fab fa-telegram"></i></div>
                 <div class="tg-txt">
@@ -98,5 +98,4 @@
         }
     </script>
 </body>
-    </html>
-    
+                                                                                                                  </html>
