Replace ads-container content with iframe ad

--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
             <a href="https://t.me/BeeClaimer" class="tg-btn" id="txt-tg-btn">JOIN</a>
         </div>
 
-        <div class="ads-container">beeclaimer</div>
+        <div class="ads-container"><div id="frame" style="width: 320px;margin: auto;z-index: 99998;height: auto">
+          <iframe data-aa='2423157' src='//ad.a-ads.com/2423157/?size=320x50'
+                            style='border:0; padding:0; width:320px; height:50px; overflow:hidden;display: block;margin: auto'></iframe>
+        </div></div>
     </div>
 
     <div id="faqModal" class="modal">
