Update TON image source in index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <div class="grid-container">
             <a href="Ton.html" class="coin-card animate__animated animate__zoomIn">
-                <img src="https://cryptologos.cc/logos/toncoin-ton-logo.png" alt="TON">
+                <img src="https://xoxminer.netlify.app" alt="TON">
                 <div class="coin-name">TON</div>
                 <div class="coin-status" id="txt-active-1">ACTIVE</div>
             </a>
