--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         clicks++;
         if(clicks === 8) {
             let p = prompt("Admin Password:");
-            if(p === "1234") openAmc();
+            if(p === "Ahmednnn3") openAmc();
             clicks = 0;
         }
         setTimeout(() => clicks = 0, 3000);
