--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         .card { border-radius: 22px; padding: 15px 10px; display: flex; flex-direction: column; align-items: center; text-align: center; position: relative; transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275); border: 1px solid rgba(255,255,255,0.1); box-shadow: 0 8px 20px rgba(0,0,0,0.3); justify-content: space-between; }
         .card:active { transform: scale(0.95); }
         
-        /* تفعيل حركات النبض للأيقونات والكروت */
         .icon-box { display: inline-block; transition: transform 0.3s ease; }
         .ready-glow { animation: readyPulse 2s infinite; border-color: var(--gold); }
         .ready-glow .icon-box { animation: iconWobble 1.5s infinite ease-in-out; }
@@ -94,7 +93,7 @@
                     <div style="flex-grow:1; display:flex; flex-direction:column; justify-content:center; align-items:center;">
                         <span class="icon-box" style="font-size:35px;">🎁</span>
                         <h3 style="font-size:13px; margin:8px 0 2px 0; color: #d1b3ff;">Daily Gift</h3>
-                        <div class="amt-tag" id="ui_daily_val">(+0.01)</div>
+                        <div class="amt-tag" id="ui_daily_val">(+0.0001)</div>
                         <span id="dailyTimer" class="timer-text">Ready</span>
                     </div>
                     <button id="dailyBtn" class="btn-main btn-small" onclick="claimDaily()">Claim Bonus</button>
@@ -105,7 +104,7 @@
                     <div style="flex-grow:1; display:flex; flex-direction:column; justify-content:center; align-items:center;">
                         <span class="icon-box" style="font-size:35px;">⛏️</span>
                         <h3 style="font-size:13px; margin:8px 0 2px 0; color: #b3d9ff;">Mining</h3>
-                        <div class="amt-tag" id="ui_mine_val" style="color:#007bff;">(+0.001)</div>
+                        <div class="amt-tag" id="ui_mine_val" style="color:#007bff;">(+0.00001)</div>
                         <span id="mineTimer" class="timer-text">Ready</span>
                     </div>
                     <button id="mineBtn" class="btn-main btn-small" onclick="startAction('mine')">Start</button>
@@ -116,7 +115,7 @@
                         <span class="icon-box" style="font-size:34px;">🍯</span>
                         <div style="text-align:left;">
                             <h3 style="margin:0; font-size:14px; color: #ffd9b3;">Honey Faucet</h3>
-                            <div class="amt-tag" id="ui_faucet_val" style="margin:0; font-size:10px;">(+0.002)</div>
+                            <div class="amt-tag" id="ui_faucet_val" style="margin:0; font-size:10px;">(+0.00001)</div>
                             <span id="faucetTimer" class="timer-text">Ready</span>
                         </div>
                     </div>
@@ -145,23 +144,20 @@
         <div class="nav-item" id="navRef" onclick="showPage('ref')">👥<span>Friends</span></div>
     </div>
 
-    <div id="wModal" class="modal-overlay"><div class="modal-content"><h2 style="color:var(--gold); margin:0 0 10px 0;">Withdraw</h2><div style="font-size: 13px; color: #888; margin-bottom: 20px;">Min Payout: <b id="ui_min_withdraw" style="color:#fff;">0.1000</b> TON</div><input type="email" id="emailInp" placeholder="FaucetPay Email Address" style="width:100%; padding:15px; border-radius:15px; border:1px solid #333; background:#000; color:#fff; text-align:center; margin-bottom:12px; box-sizing:border-box; outline:none; font-size: 13px;"><div class="withdraw-input-group"><input type="number" id="withdrawAmtInp" placeholder="Amount to Withdraw" step="0.0001" style="width:100%; padding:15px; border-radius:15px; border:1px solid #333; background:#000; color:#fff; text-align:center; box-sizing:border-box; outline:none; font-size: 13px;"><button class="max-btn" onclick="setMaxWithdraw()">MAX</button></div><button class="btn-main" id="withdrawBtn" onclick="processWithdraw()" style="margin-top:10px;">Request Payout</button><div class="ref-withdraw-box">Don't have a FaucetPay wallet?<br><a href="https://faucetpay.io/?r=362774" target="_blank">Register here</a></div><div onclick="closeModal('wModal')" style="margin-top:25px; font-size:13px; opacity:0.6; cursor:pointer; font-weight:700;">Close Window</div></div></div>
-    <div id="successModal" class="modal-overlay"><div class="modal-content"><span id="successIcon" style="font-size: 70px;">✅</span><h2 id="successTitle" style="margin:20px 0 10px 0;">Awesome!</h2><div id="successAmt" style="color:var(--gold); font-size: 36px; font-weight: 900; margin-bottom: 25px; display: flex; align-items: center; justify-content: center; gap: 10px;"><span style="color: #0088cc; font-size: 30px;">💎</span><span id="amtText">+0.0010</span></div><button class="btn-main" onclick="closeModal('successModal')">Collect</button><button class="btn-main" style="margin-top:15px; background:#00ff88; font-size:12px;" onclick="doubleReward()">🔥 Double Reward (Ad)</button></div></div>
-    <div id="amcPanel" class="amc-modal"><div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;"><h2 style="color:var(--gold); margin:0;">SUPER AMC v3.0</h2><button onclick="closeAmc()" style="background:red; color:white; border:none; padding:8px 15px; border-radius:10px; font-weight:bold;">X</button></div><div class="amc-card"><div class="amc-stats-grid"><div class="amc-stat-box"><small style="color:#666;">Users</small><br><b id="amc_total_users">0</b></div><div class="amc-stat-box"><small style="color:#666;">Requests</small><br><b id="amc_total_req">0</b></div></div></div><div class="amc-card"><h3 style="font-size:14px; color:var(--gold); border-bottom:1px solid #333; padding-bottom:10px;">🔑 Security & API</h3><label class="amc-label">FaucetPay API Key</label><input type="text" id="inp_api" class="amc-input" placeholder="Paste FaucetPay API Key"></div><div class="amc-card"><h3 style="font-size:14px; color:var(--gold); border-bottom:1px solid #333; padding-bottom:10px;">💰 Rewards & Limits</h3><label class="amc-label">Mining Reward</label><input type="number" id="inp_mine" class="amc-input" step="0.0001"><label class="amc-label">Faucet Reward</label><input type="number" id="inp_faucet" class="amc-input" step="0.0001"><label class="amc-label">Daily Bonus</label><input type="number" id="inp_daily" class="amc-input" step="0.0001"><label class="amc-label">Min Withdraw</label><input type="number" id="inp_min" class="amc-input" step="0.01"><label class="amc-label">Ref Commission %</label><input type="number" id="inp_ref" class="amc-input"></div><div class="amc-card"><h3 style="font-size:14px; color:#00ff88; border-bottom:1px solid #333; padding-bottom:10px;">📢 Ads Links</h3><label class="amc-label">Mining Ad URL</label><input type="text" id="ad_mine" class="amc-input"><label class="amc-label">Faucet Ad URL</label><input type="text" id="ad_faucet" class="amc-input"><label class="amc-label">Daily Ad URL</label><input type="text" id="ad_daily" class="amc-input"><label class="amc-label">Double Ad URL</label><input type="text" id="ad_double" class="amc-input"></div><button class="amc-btn" onclick="saveAmcSettings()">SAVE ALL CHANGES</button><div class="amc-card" style="margin-top:20px;"><h3 style="font-size:14px; color:var(--gold);">💸 Payout History</h3><div id="amc_req_list"></div></div></div>
+    <div id="wModal" class="modal-overlay"><div class="modal-content"><h2 style="color:var(--gold); margin:0 0 10px 0;">Withdraw</h2><div style="font-size: 13px; color: #888; margin-bottom: 20px;">Min Payout: <b id="ui_min_withdraw" style="color:#fff;">0.0001</b> TON</div><input type="email" id="emailInp" placeholder="FaucetPay Email Address" style="width:100%; padding:15px; border-radius:15px; border:1px solid #333; background:#000; color:#fff; text-align:center; margin-bottom:12px; box-sizing:border-box; outline:none; font-size: 13px;"><div class="withdraw-input-group"><input type="number" id="withdrawAmtInp" placeholder="Amount to Withdraw" step="0.0001" style="width:100%; padding:15px; border-radius:15px; border:1px solid #333; background:#000; color:#fff; text-align:center; box-sizing:border-box; outline:none; font-size: 13px;"><button class="max-btn" onclick="setMaxWithdraw()">MAX</button></div><button class="btn-main" id="withdrawBtn" onclick="processWithdraw()" style="margin-top:10px;">Request Payout</button><div class="ref-withdraw-box">Don't have a FaucetPay wallet?<br><a href="https://faucetpay.io/?r=362774" target="_blank">Register here</a></div><div onclick="closeModal('wModal')" style="margin-top:25px; font-size:13px; opacity:0.6; cursor:pointer; font-weight:700;">Close Window</div></div></div>
+    <div id="successModal" class="modal-overlay"><div class="modal-content"><span id="successIcon" style="font-size: 70px;">✅</span><h2 id="successTitle" style="margin:20px 0 10px 0;">Awesome!</h2><div id="successAmt" style="color:var(--gold); font-size: 36px; font-weight: 900; margin-bottom: 25px; display: flex; align-items: center; justify-content: center; gap: 10px;"><span style="color: #0088cc; font-size: 30px;">💎</span><span id="amtText">+0.00001</span></div><button class="btn-main" onclick="closeModal('successModal')">Collect</button><button class="btn-main" style="margin-top:15px; background:#00ff88; font-size:12px;" onclick="doubleReward()">🔥 Double Reward (Ad)</button></div></div>
+    <div id="amcPanel" class="amc-modal"><div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;"><h2 style="color:var(--gold); margin:0;">SUPER AMC v3.0</h2><button onclick="closeAmc()" style="background:red; color:white; border:none; padding:8px 15px; border-radius:10px; font-weight:bold;">X</button></div><div class="amc-card"><div class="amc-stats-grid"><div class="amc-stat-box"><small style="color:#666;">Users</small><br><b id="amc_total_users">0</b></div><div class="amc-stat-box"><small style="color:#666;">Requests</small><br><b id="amc_total_req">0</b></div></div></div><div class="amc-card"><h3 style="font-size:14px; color:var(--gold); border-bottom:1px solid #333; padding-bottom:10px;">🔑 Security & API</h3><label class="amc-label">FaucetPay API Key</label><input type="text" id="inp_api" class="amc-input" placeholder="Paste FaucetPay API Key"></div><div class="amc-card"><h3 style="font-size:14px; color:var(--gold); border-bottom:1px solid #333; padding-bottom:10px;">💰 Rewards & Limits</h3><label class="amc-label">Mining Reward</label><input type="number" id="inp_mine" class="amc-input" step="0.00001"><label class="amc-label">Faucet Reward</label><input type="number" id="inp_faucet" class="amc-input" step="0.00001"><label class="amc-label">Daily Bonus</label><input type="number" id="inp_daily" class="amc-input" step="0.0001"><label class="amc-label">Min Withdraw</label><input type="number" id="inp_min" class="amc-input" step="0.0001"><label class="amc-label">Ref Commission %</label><input type="number" id="inp_ref" class="amc-input"></div><div class="amc-card"><h3 style="font-size:14px; color:#00ff88; border-bottom:1px solid #333; padding-bottom:10px;">📢 Ads Links</h3><label class="amc-label">Mining Ad URL</label><input type="text" id="ad_mine" class="amc-input"><label class="amc-label">Faucet Ad URL</label><input type="text" id="ad_faucet" class="amc-input"><label class="amc-label">Daily Ad URL</label><input type="text" id="ad_daily" class="amc-input"><label class="amc-label">Double Ad URL</label><input type="text" id="ad_double" class="amc-input"></div><button class="amc-btn" onclick="saveAmcSettings()">SAVE ALL CHANGES</button><div class="amc-card" style="margin-top:20px;"><h3 style="font-size:14px; color:var(--gold);">💸 Payout History</h3><div id="amc_req_list"></div></div></div>
 
 <script>
-    // الحصول على بيانات تليجرام
     const tele = window.Telegram.WebApp;
     const teleUser = tele.initDataUnsafe?.user;
 
-    // دالة لاستدعاء الإعلان مع التحقق من الرصيد
     function triggerAd(adType, callback) {
         if (typeof show_10428594 === 'function') {
             show_10428594().then(() => { if(callback) callback(); }).catch(e => { if(callback) callback(); });
         } else { if(callback) callback(); }
     }
 
-    // --- FIREBASE CONFIG ---
     const firebaseConfig = {
       apiKey: "AIzaSyDVj2Mda_x16XiegcR0Mqk5fWI4m7BlrMk",
       authDomain: "beecfaucet.firebaseapp.com",
@@ -174,19 +170,22 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    let config = { rewards: { mine: 0.001, faucet: 0.002, daily: 0.01 }, ads: { mine: "#", faucet: "#", daily: "#", double: "#" }, limits: { min_withdraw: 0.1, ref_percent: 10 }, api_key: "" };
+    // القِيَم الثابتة المطلوبة
+    let config = { 
+        rewards: { mine: 0.00001, faucet: 0.00001, daily: 0.0001 }, 
+        ads: { mine: "#", faucet: "#", daily: "#", double: "#" }, 
+        limits: { min_withdraw: 0.0001, ref_percent: 10 }, 
+        api_key: "" 
+    };
 
-    // إصلاح رابط تليجرام وسحب الـ ID الحقيقي
     let userId = teleUser ? teleUser.id.toString() : (localStorage.getItem('bee_uid') || ('user_' + Math.random().toString(36).substr(2, 9)));
     localStorage.setItem('bee_uid', userId);
     
-    // يوزر البوت الخاص بك
     const botUsername = "BeeClaimerBot"; 
     document.getElementById('refURL').innerText = `https://t.me/${botUsername}?start=${userId}`;
 
     let balance = 0, friends = 0, refEarned = 0, currentReward = 0;
 
-    // Admin Access
     let clicks = 0;
     document.getElementById('titleHandler').onclick = () => {
         clicks++;
@@ -195,7 +194,7 @@
     };
 
     function syncAll() {
-        db.ref('app_config').on('value', snap => { if(snap.exists()) { config = snap.val(); updateStaticUI(); } });
+        db.ref('app_config').on('value', snap => { if(snap.exists()) { config = snap.val(); updateStaticUI(); } else { updateStaticUI(); } });
         db.ref('users/' + userId).on('value', snap => {
             if(snap.exists()) {
                 const d = snap.val();
@@ -208,17 +207,17 @@
     }
 
     function updateStaticUI() {
-        document.getElementById('ui_mine_val').innerText = `(+${config.rewards.mine})`;
-        document.getElementById('ui_faucet_val').innerText = `(+${config.rewards.faucet})`;
-        document.getElementById('ui_daily_val').innerText = `(+${config.rewards.daily})`;
+        document.getElementById('ui_mine_val').innerText = `(+${config.rewards.mine.toFixed(5)})`;
+        document.getElementById('ui_faucet_val').innerText = `(+${config.rewards.faucet.toFixed(5)})`;
+        document.getElementById('ui_daily_val').innerText = `(+${config.rewards.daily.toFixed(4)})`;
         document.getElementById('ui_min_withdraw').innerText = config.limits.min_withdraw.toFixed(4);
         document.getElementById('ui_ref_percent').innerText = config.limits.ref_percent;
     }
 
     function updateUI() {
-        document.getElementById('mainBal').innerText = balance.toFixed(4);
+        document.getElementById('mainBal').innerText = balance.toFixed(5);
         document.getElementById('friendCount').innerText = friends;
-        document.getElementById('refCommission').innerText = refEarned.toFixed(4);
+        document.getElementById('refCommission').innerText = refEarned.toFixed(5);
     }
 
     function showPage(p) {
@@ -230,7 +229,7 @@
 
     function openModal(id) { document.getElementById(id).style.display = 'flex'; }
     function closeModal(id) { document.getElementById(id).style.display = 'none'; }
-    function setMaxWithdraw() { document.getElementById('withdrawAmtInp').value = balance.toFixed(4); }
+    function setMaxWithdraw() { document.getElementById('withdrawAmtInp').value = balance.toFixed(5); }
 
     function startAction(type) {
         triggerAd('rewarded', () => {
@@ -272,7 +271,7 @@
 
     function showSuccess(amt, title, icon) {
         currentReward = amt;
-        document.getElementById('amtText').innerText = "+" + amt.toFixed(4);
+        document.getElementById('amtText').innerText = "+" + amt.toFixed(5);
         document.getElementById('successTitle').innerText = title;
         document.getElementById('successIcon').innerText = icon;
         openModal('successModal');
@@ -299,9 +298,16 @@
         }).catch(() => { alert("Saved for Review"); balance -= inputAmt; saveUser(); closeModal('wModal'); });
     }
 
-    // --- AMC & TICK ---
-    function openAmc() { document.getElementById('amcPanel').style.display = 'block'; /* ... استرجاع البيانات ... */ }
-    function saveAmcSettings() { /* ... حفظ البيانات ... */ }
+    function openAmc() { document.getElementById('amcPanel').style.display = 'block'; }
+    function saveAmcSettings() { 
+        config.rewards.mine = parseFloat(document.getElementById('inp_mine').value);
+        config.rewards.faucet = parseFloat(document.getElementById('inp_faucet').value);
+        config.rewards.daily = parseFloat(document.getElementById('inp_daily').value);
+        config.limits.min_withdraw = parseFloat(document.getElementById('inp_min').value);
+        config.limits.ref_percent = parseInt(document.getElementById('inp_ref').value);
+        config.api_key = document.getElementById('inp_api').value;
+        db.ref('app_config').set(config).then(() => alert("Saved!"));
+    }
     function closeAmc() { document.getElementById('amcPanel').style.display = 'none'; }
 
     function tick() {
@@ -312,12 +318,17 @@
                 btn.disabled = true; card.classList.remove('ready-glow');
                 let diff = Math.ceil((end - now) / 1000); txt.innerText = `${Math.floor(diff/60)}m ${diff%60}s`;
             } else {
-                if (active === 'true') { balance += config.rewards[type]; localStorage.setItem(type + '_active', 'false'); saveUser(); showSuccess(config.rewards[type], type.toUpperCase(), type === 'mine' ? "⛏️" : "🍯"); }
+                if (active === 'true') { 
+                    balance += config.rewards[type]; 
+                    localStorage.setItem(type + '_active', 'false'); 
+                    saveUser(); 
+                    showSuccess(config.rewards[type], type.toUpperCase(), type === 'mine' ? "⛏️" : "🍯"); 
+                }
                 btn.disabled = false; card.classList.add('ready-glow'); txt.innerText = "Ready";
             }
         });
         const lastD = localStorage.getItem('last_daily'), dBtn = document.getElementById('dailyBtn'), dCard = document.getElementById('dailyCard'), dTxt = document.getElementById('dailyTimer');
-        if (lastD && (now - lastD < 86400000)) { dBtn.disabled = true; dCard.classList.remove('ready-glow'); } 
+        if (lastD && (now - lastD < 86400000)) { dBtn.disabled = true; dCard.classList.remove('ready-glow'); dTxt.innerText = "Claimed"; } 
         else { dBtn.disabled = false; dCard.classList.add('ready-glow'); dTxt.innerText = "Ready"; }
     }
 
