--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
     let userId = teleUser ? teleUser.id.toString() : (localStorage.getItem('bee_uid') || ('user_' + Math.random().toString(36).substr(2, 9)));
     localStorage.setItem('bee_uid', userId);
     
-    const botUsername = "BeeClaimerBot"; 
+    // تم إصلاح الخطأ هنا: إضافة الشرطة السفلية ليتوافق مع beeclaimer_bot
+    const botUsername = "beeclaimer_bot"; 
     document.getElementById('refURL').innerText = `https://t.me/${botUsername}?start=${userId}`;
 
     let balance = 0, friends = 0, refEarned = 0, currentReward = 0;
@@ -207,138 +208,4 @@
     function updateStaticUI() {
         document.getElementById('ui_mine_val').innerText = `(+${config.rewards.mine.toFixed(5)})`;
         document.getElementById('ui_faucet_val').innerText = `(+${config.rewards.faucet.toFixed(5)})`;
-        document.getElementById('ui_daily_val').innerText = `(+${config.rewards.daily.toFixed(4)})`;
-        document.getElementById('ui_min_withdraw').innerText = config.limits.min_withdraw.toFixed(4);
-        document.getElementById('ui_ref_percent').innerText = config.limits.ref_percent;
-    }
-
-    function updateUI() {
-        document.getElementById('mainBal').innerText = balance.toFixed(5);
-        document.getElementById('friendCount').innerText = friends;
-        document.getElementById('refCommission').innerText = refEarned.toFixed(5);
-    }
-
-    function showPage(p) {
-        document.querySelectorAll('.page').forEach(pg => pg.classList.remove('active-page'));
-        document.querySelectorAll('.nav-item').forEach(nv => nv.classList.remove('active'));
-        document.getElementById(p + 'Page').classList.add('active-page');
-        document.getElementById('nav' + p.charAt(0).toUpperCase() + p.slice(1)).classList.add('active');
-    }
-
-    function openModal(id) { document.getElementById(id).style.display = 'flex'; }
-    function closeModal(id) { document.getElementById(id).style.display = 'none'; }
-    function setMaxWithdraw() { document.getElementById('withdrawAmtInp').value = balance.toFixed(5); }
-
-    function startAction(type) {
-        triggerAd('rewarded', () => {
-            if(config.ads[type] !== "#") window.open(config.ads[type], '_blank');
-            localStorage.setItem(type + '_end', Date.now() + (5 * 60 * 1000));
-            localStorage.setItem(type + '_active', 'true');
-        });
-    }
-
-    function claimDaily() {
-        const last = localStorage.getItem('last_daily');
-        if (!last || (Date.now() - last > 86400000)) {
-            triggerAd('pop', () => {
-                if(config.ads.daily !== "#") window.open(config.ads.daily, '_blank');
-                balance += config.rewards.daily;
-                localStorage.setItem('last_daily', Date.now());
-                saveUser();
-                showSuccess(config.rewards.daily, "Daily Bonus", "🎁");
-            });
-        }
-    }
-
-    function doubleReward() {
-        triggerAd('pop', () => {
-            if(config.ads.double !== "#") window.open(config.ads.double, '_blank');
-            balance += currentReward;
-            saveUser();
-            closeModal('successModal');
-            alert("Reward Doubled!");
-        });
-    }
-
-    function speedUp(type) {
-        triggerAd('rewarded', () => {
-            let end = parseInt(localStorage.getItem(type + '_end'));
-            if(end && end > Date.now()) {
-                // تقليل دقيقتين من الوقت المتبقي
-                localStorage.setItem(type + '_end', end - (120 * 1000)); 
-            }
-        });
-    }
-
-    function showSuccess(amt, title, icon) {
-        currentReward = amt;
-        document.getElementById('amtText').innerText = "+" + amt.toFixed(5);
-        document.getElementById('successTitle').innerText = title;
-        document.getElementById('successIcon').innerText = icon;
-        openModal('successModal');
-    }
-
-    function saveUser() { db.ref('users/' + userId).update({ balance: balance }); }
-    function copyRef() { navigator.clipboard.writeText(document.getElementById('refURL').innerText); alert('Copied!'); }
-
-    function processWithdraw() {
-        const email = document.getElementById('emailInp').value;
-        const inputAmt = parseFloat(document.getElementById('withdrawAmtInp').value);
-        const btn = document.getElementById('withdrawBtn');
-        if(isNaN(inputAmt) || inputAmt < config.limits.min_withdraw || inputAmt > balance || !email.includes("@")) return alert("Check inputs.");
-
-        btn.disabled = true; btn.innerText = "PROCESSING...";
-        fetch('https://faucetpay.io/api/v1/send', {
-            method: 'POST',
-            body: new URLSearchParams({ 'api_key': config.api_key, 'currency': 'TON', 'amount': Math.floor(inputAmt * 100000000), 'to': email })
-        }).then(res => res.json()).then(data => {
-            if(data.status === 200) {
-                db.ref('withdrawals').push({ uid: userId, email: email, amount: inputAmt, status: 'PAID', time: Date.now() });
-                balance -= inputAmt; saveUser(); closeModal('wModal'); alert("Success!");
-            } else { alert("Error: " + data.message); btn.disabled = false; }
-        }).catch(() => { alert("Saved for Review"); balance -= inputAmt; saveUser(); closeModal('wModal'); });
-    }
-
-    function openAmc() { document.getElementById('amcPanel').style.display = 'block'; }
-    function saveAmcSettings() { 
-        config.rewards.mine = parseFloat(document.getElementById('inp_mine').value);
-        config.rewards.faucet = parseFloat(document.getElementById('inp_faucet').value);
-        config.rewards.daily = parseFloat(document.getElementById('inp_daily').value);
-        config.limits.min_withdraw = parseFloat(document.getElementById('inp_min').value);
-        config.limits.ref_percent = parseInt(document.getElementById('inp_ref').value);
-        config.api_key = document.getElementById('inp_api').value;
-        db.ref('app_config').set(config).then(() => alert("Saved!"));
-    }
-    function closeAmc() { document.getElementById('amcPanel').style.display = 'none'; }
-
-    function tick() {
-        const now = Date.now();
-        ['mine', 'faucet'].forEach(type => {
-            const end = localStorage.getItem(type + '_end'), active = localStorage.getItem(type + '_active'), btn = document.getElementById(type + 'Btn'), txt = document.getElementById(type + 'Timer'), card = document.getElementById(type + 'Card');
-            const speedTag = document.getElementById('speedMineTag');
-            
-            if (end && end > now) {
-                btn.disabled = true; card.classList.remove('ready-glow');
-                let diff = Math.ceil((end - now) / 1000); txt.innerText = `${Math.floor(diff/60)}m ${diff%60}s`;
-                if(type === 'mine') speedTag.style.display = 'block';
-            } else {
-                if (active === 'true') { 
-                    balance += config.rewards[type]; 
-                    localStorage.setItem(type + '_active', 'false'); 
-                    saveUser(); 
-                    showSuccess(config.rewards[type], type.toUpperCase(), type === 'mine' ? "⛏️" : "🍯"); 
-                }
-                btn.disabled = false; card.classList.add('ready-glow'); txt.innerText = "Ready";
-                if(type === 'mine') speedTag.style.display = 'none';
-            }
-        });
-        const lastD = localStorage.getItem('last_daily'), dBtn = document.getElementById('dailyBtn'), dCard = document.getElementById('dailyCard'), dTxt = document.getElementById('dailyTimer');
-        if (lastD && (now - lastD < 86400000)) { dBtn.disabled = true; dCard.classList.remove('ready-glow'); dTxt.innerText = "Claimed"; } 
-        else { dBtn.disabled = false; dCard.classList.add('ready-glow'); dTxt.innerText = "Ready"; }
-    }
-
-    setInterval(tick, 1000);
-    syncAll();
-</script>
-</body>
-</html>
+        document.getElementById('ui_daily_va
